--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@supabase/supabase-js": "^2.44.2",
     "inversify": "^6.0.2",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
+    "zod": "^3.23.8",
+    "zsa": "^0.5.0",
+    "zsa-openapi": "^0.3.0",
+    "zsa-react": "^0.2.2",
+    "zsa-react-query": "^0.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
